Fixes #800: wrong string displayed in channel comparison, overlapping labels in headers

--- a/web/style/transvision.css
+++ b/web/style/transvision.css
@@ -353,6 +353,7 @@ th {
 
 th.select_header {
     position: relative;
+    min-width: 250px;
 }
 
 th.select_header a {
